--- a/CachedRepositoryNetCore/CachedRepository.NetCore.csproj
+++ b/CachedRepositoryNetCore/CachedRepository.NetCore.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.0-pre</Version>
+    <Version>1.0.2-pre</Version>
     <Company>Oğuzhan Kahyaoğlu</Company>
     <Authors>Oğuzhan Kahyaoğlu</Authors>
     <PackageProjectUrl>https://github.com/oguzhankahyaoglu/CachedRepository.NetCore</PackageProjectUrl>
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="LazyCache" Version="2.0.0-beta03" />
+    <PackageReference Include="LazyCache.AspNetCore" Version="2.0.0-beta03" />
   </ItemGroup>
   <!--<files>
     <file src="bin\Debug\netstandard2.0\CachedRepository.deps.json" target="lib\netstandard2.0" />
