--- a/CachedRepositoryNetCore/CachedRepository.NetCore.csproj
+++ b/CachedRepositoryNetCore/CachedRepository.NetCore.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.2-pre</Version>
+    <Version>2.0.0-pre</Version>
     <Company>Oğuzhan Kahyaoğlu</Company>
     <Authors>Oğuzhan Kahyaoğlu</Authors>
     <PackageProjectUrl>https://github.com/oguzhankahyaoglu/CachedRepository.NetCore</PackageProjectUrl>
@@ -12,7 +12,14 @@
     <NeutralLanguage>en</NeutralLanguage>
     <RepositoryUrl>https://github.com/oguzhankahyaoglu/CachedRepository.NetCore</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
+    <PackageReleaseNotes>v2: Async repositories</PackageReleaseNotes>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="CachedDictionary.cs" />
+    <Compile Remove="CachedObject.cs" />
+    <Compile Remove="CachedRepo.cs" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="LazyCache" Version="2.0.0-beta03" />
